--- a/automationpom/pom.xml
+++ b/automationpom/pom.xml
@@ -16,7 +16,11 @@
             <artifactId>automation-testutils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.selenium.study</groupId>
+            <artifactId>automation-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
