--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     </dependencies>
 
     <build>
+      <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -76,7 +77,12 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.5.0.1254</version>
+            </plugin>
         </plugins>
+      </pluginManagement>
     </build>
-
 </project>
