--- a/automationtest/pom.xml
+++ b/automationtest/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>automation-pom</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.selenium.study</groupId>
+            <artifactId>automation-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>com.selenium.study</groupId>-->
         <!--<artifactId>automation-testutils</artifactId>-->
