--- a/automationtest/pom.xml
+++ b/automationtest/pom.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>automation</artifactId>
-        <groupId>com.selenium.study</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<artifactId>automation</artifactId>
+		<groupId>com.selenium.study</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>automation-test</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.selenium.study</groupId>
-            <artifactId>automation-testutils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.selenium.study</groupId>
-            <artifactId>automation-pom</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.selenium.study</groupId>
-            <artifactId>automation-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.selenium.study</groupId>-->
-        <!--<artifactId>automation-testutils</artifactId>-->
-        <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
-    </dependencies>
+	<artifactId>automation-test</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.selenium.study</groupId>
+			<artifactId>automation-testutils</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.selenium.study</groupId>
+			<artifactId>automation-pom</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.selenium.study</groupId>
+			<artifactId>automation-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.32</version>
+		</dependency>
+
+		<!--<dependency>-->
+		<!--<groupId>com.selenium.study</groupId>-->
+		<!--<artifactId>automation-testutils</artifactId>-->
+		<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
+	</dependencies>
 
 
 </project>
